--- a/app/src/main/res/layout/list_item_history.xml
+++ b/app/src/main/res/layout/list_item_history.xml
@@ -44,7 +44,8 @@
                     android:text="New Text"
                     android:id="@+id/txtServiceCode"
                     android:gravity="center"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:textColor="#000000" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -52,7 +53,8 @@
                     android:text="New Text"
                     android:id="@+id/txtRegisterTime"
                     android:gravity="center"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:textColor="#000000" />
             </LinearLayout>
 
             <LinearLayout
