--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -40,7 +40,8 @@
             android:id="@+id/ed_url_api"
             android:text="http://api.echeck-tools.com"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp" />
+            android:layout_marginRight="16dp"
+            android:singleLine="true" />
     </LinearLayout>
 
     <LinearLayout
