--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Tools Tracker"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textSize="@dimen/abc_text_size_large_material"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <TextView
@@ -55,7 +57,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/btn_clear" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -75,7 +77,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/btn_scan" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -95,7 +97,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/btn_setting" />
 
             <TextView
                 android:layout_width="match_parent"
