--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -43,7 +43,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:singleLine="true"
-            android:text="http://api.echeck-tools.com/" />
+            android:text="http://api.echeck-tools.com" />
     </LinearLayout>
 
     <LinearLayout
