--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -27,6 +27,15 @@
         android:layout_above="@+id/aa">
 
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/imageView2"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/service_bg"
+            android:adjustViewBounds="false"
+            android:layout_margin="24dp" />
     </RelativeLayout>
 
     <LinearLayout
